@@ -484,6 +484,12 @@ Mod(1, x^2 - 2)
 [280970, x^2 + 12259, x^4 + 35869, -x^4 + x - 66328, -1/2*x^4 + 1/2*x^3 - 33
 164*x^2 + 1/2*x - 66349/2, 1/2*x^5 - 66329/2*x^4 - 21/2*x^2 + 1/2*x - 33164]
 1
+[[3, [0, 1, 0, 0, 0, 0]~, 6, 1, [0, -12, 0, 0, 15, 0; 0, 0, 0, -12, 0, -27; 
+0, -3, 0, 0, 9, 0; -1, 0, -4, 0, 0, 0; 0, 0, 0, 3, 0, 12; -1, 0, -1, 0, 0, 0
+]]]
+[[[7, [0, 1, 0]~, 3, 1, [0, 21, 0; 0, 0, 21; 1, 0, 0]]], [[[7, [0, 1, 0, 0, 
+0, 0]~, 6, 1, [0, 21, 0, 0, 0, 0; 0, 0, 0, 21, 0, 21; 0, 0, 0, 0, -21, 0; -1
+, 0, 11, 0, 0, 0; 0, 0, 0, 0, 0, -21; 2, 0, -1, 0, 0, 0]]]]]
 [18416, x^2 + 6979, x^4 + 3879, -9208*x^4 + 9208*x, -6979/2*x^4 + 1/2*x^3 + 
 6979/2*x - 21/2, 1/2*x^5 - 3879/2*x^4 - 21/2*x^2 + 3879/2*x]
 
@@ -841,4 +847,4 @@ error("inconsistent operation 'RgV_RgC_mul' t_VEC (3 elts) , t_COL (2 elts).
   ***                 ^--------------------
   *** rnfidealtwoelt: incorrect type in idealtyp [non-square t_MAT] (t_MAT).
 0
-Total time spent: 628
+Total time spent: 632
